--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr: 
   github: wdowling
   instagram: 
-  linkedin: william-dowling
+  linkedin: william-dowling/38/249/250
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: w_dowling
