--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Words and Sound
-email: wmdowling@gmail.com
+#email: wmdowling@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Random words and sounds.
 baseurl: "" # the subpath of your site, e.g. /blog
