--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,11 @@
 
 title: Words and Sound
 #email: wmdowling@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Random words and sounds.
+#description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wdowling.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-#github_username:  jekyll
+github_username:  wdowling
 
 # Build settings
 theme: minima
